fixed readme , and rag implementation

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^2.0.1",
     "next": "^15.3.4",
     "pdf-parse": "^1.1.1",
+    "pptxgenjs": "^4.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.59.0",
